<resources>
    <string name="app_name">Todo List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title:</string>
    <string name="description">description:</string>
    <string name="date">date:</string>
    <string name="time">time:</string>
    <string name="title_hint">please add the task title</string>
    <string name="desc_hint">please add the task description</string>
    <string name="date_hint">please add the task date</string>
    <string name="time_hint">please add the task time</string>
    <string name="crud_delete">delete</string>
    <string name="crud_edit">edit</string>
    <string name="crud_done">done</string>
    <string name="crud_add">add</string>
    <string name="toast_crud_success">your item added successfully!</string>
    <string name="toast_req_success">your request successfully done!</string>
    <string name="confirm">confirm</string>
    <string name="title_warning">title can\'t be empty please fill it</string>
    <string name="task_date_picker">task date picker:</string>
    <string name="task_time_picker">task time picker:</string>
    <string name="clear_list_menu">clear all lists</string>
    <string name="clear_list_toast">are you sure you want delete all your lists?</string>
    <string name="menu_subtitle">show subtitle</string>
    <string name="subtitle_format">%1$d tasks</string>
    <string name="hide_subtitle">hide subtitle</string>
    <string name="zero_task">0 task</string>
    <string name="undone_task">Undone</string>
    <string name="done_task">Done</string>
    <string name="all_task">All</string>
    <string name="user_name">enter your user name</string>
    <string name="password">enter your password</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">don\'t have any account? (create account)</string>
    <string name="forget_password">don\'t remember your password? (forget password)</string>
    <string name="confirm_email">please confirm your email address</string>
    <string name="success_send_email">password successfully send to your email ! check your email</string>
    <string name="failed_send_email">got problem with your request!</string>
    <string name="email_subject">forget password ? todo list application</string>
    <string name="email_body">your password is :  </string>
    <string name="logout_account">logout</string>
    <string name="profile">My Profile</string>
    <string name="edit_profile">edit profile</string>
    <string name="remove_profile">delete account</string>
    <string name="open_toggle">Open</string>
    <string name="close_toggle">Close</string>
    <string name="username">username : </string>
    <string name="user_id">ID :  </string>
    <string name="email">email : </string>
    <string name="user_date">date created : </string>
    

    <string name="share_task_format">
        %1$s! this task have status %2$s at %3$s by %4$s and  %5$s
    </string>
    <string name="have_description">
    with description %s
    </string>
    <string name="no_description">
        don\'t have description
    </string>

    <string name="task_report_subject">TaskManager Task Report </string>
    <string name="send_report">
        send Task via
    </string>



    <plurals name="subtitle">
        <item quantity="one">%1$d task</item>
        <item quantity="other">%1$d tasks</item>
    </plurals>
</resources>
