<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <!--app:behavior_hideable="true"-->

    <Button
        android:id="@+id/crud_add"
        android:onClick="buttonHandel"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
      android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/crud_add"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/crud_done"
        android:onClick="buttonHandel"
        android:textSize="25sp"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/crud_done"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/crud_edit"
        android:onClick="buttonHandel"
        android:textSize="25sp"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/crud_edit"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/crud_delete"
        android:onClick="buttonHandel"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/crud_delete"
        android:background="@android:color/holo_red_light"
        android:layout_width="match_parent"
        android:layout_height="60dp" />


</LinearLayout>